fixed profile card horizontal alignment in mobile display

--- a/style.css
+++ b/style.css
@@ -415,6 +415,7 @@ body.mobile-nav-open .nav__mobile-nav {
 .crew_section {
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .crew_profile__item img{
